--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
       "@types/react-dom": "^18.0.0",
       "axios": "^1.1.3",
       "gh-pages": "^4.0.0",
+      "movie-trailer": "^2.1.0",
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
       "react-router-dom": "^6.4.2",
       "react-scripts": "5.0.1",
+      "react-youtube": "^10.0.0",
       "sass": "^1.55.0",
       "typescript": "^4.4.2",
       "web-vitals": "^2.1.0"
